--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Hello! My name is TJ McCoy and I am originally from Utah in the United States. I enjoy 
         spending time with my family and goofing around with my boys, even though that usually means 
         a messy house afterwards. I also enjoy being outside even though I suffer from seasonal 
-        allergies. I enjoy watching NFL and supporting the best team ever the Green Bay Packers!</p>
+        allergies. I enjoy watching NFL and supporting the best team ever the Green Bay Packers!!</p>
     </main>
     <footer>
         <p>&copy;2025  |  TJ McCoy  |  Utah, USA </p>
