home page enhancement

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title> TJ McCoy | wdd 130</title>
+    <meta name="description" content="Home page for TJ McCoy, WDD130, this page is to give a quick introduction of myself and to be used for assignments.">
+    <meta name="author" content="TJ McCoy">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
@@ -22,6 +24,15 @@
         a messy house afterwards. I also enjoy being outside even though I suffer from seasonal 
         allergies. I enjoy watching NFL and supporting the best team ever the Green Bay Packers!!</p>
     </main>
+    <aside>
+      <h2>Utah</h2>
+      <img src="images/utah.jpg" alt="utah national park">
+      <p>Utah is the state that looks like a giant chair in the western United States. In the south you 
+        can find a desert type of climate, and more north is much greener and snows in the winter time. 
+        The entire state is riddled with mountains as it is located as part of the Rocky Mountains. there
+        are multiple national parks that have amazing sites that you won't find anywhere else.
+      </p>
+    </aside>
     <footer>
         <p>&copy;2025  |  TJ McCoy  |  Utah, USA </p>
     </footer>
