about.html-update

--- a/index.html
+++ b/index.html
@@ -17,21 +17,25 @@
         </nav>
     </header>
     <main>
+      <div class="grid">
         <h1> TJ McCoy | WDD 130</h1>
         <img src="images/profile.jpg" alt="TJ McCoy" width="200">
         <p>Hello! My name is TJ McCoy and I am originally from Utah in the United States. I enjoy 
         spending time with my family and goofing around with my boys, even though that usually means 
         a messy house afterwards. I also enjoy being outside even though I suffer from seasonal 
         allergies. I enjoy watching NFL and supporting the best team ever the Green Bay Packers!!</p>
+      </div>
     </main>
     <aside>
-      <h2>Utah</h2>
-      <img src="images/utah.jpg" alt="utah national park">
-      <p>Utah is the state that looks like a giant chair in the western United States. In the south you 
-        can find a desert type of climate, and more north is much greener and snows in the winter time. 
-        The entire state is riddled with mountains as it is located as part of the Rocky Mountains. there
-        are multiple national parks that have amazing sites that you won't find anywhere else.
-      </p>
+      <div class="grid">
+        <h2>Utah</h2>
+        <img src="images/utah.jpg" alt="utah national park">
+        <p>Utah is the state that looks like a giant chair in the western United States. In the south you 
+          can find a desert type of climate, and more north is much greener and snows in the winter time. 
+          The entire state is riddled with mountains as it is located as part of the Rocky Mountains. there
+          are multiple national parks that have amazing sites that you won't find anywhere else.
+        </p>
+      </div>
     </aside>
     <footer>
         <p>&copy;2025  |  TJ McCoy  |  Utah, USA </p>
