--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,10 +16,12 @@
             <img src="images/whitewater-rafting-logo.jpeg" alt="WWR logo">
         </div>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact Us</a>
+            <ul class="navigation">
+                <a href="index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="trips.html">Trips</a>
+                <a href="contact.html">Contact Us</a>
+            </ul>
         </nav>
     </header>
     <main>
