about-html-updates

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -17,10 +17,10 @@
         </div>
         <nav>
             <ul class="navigation">
-                <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="trips.html">Trips</a>
-                <a href="contact.html">Contact Us</a>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -33,17 +33,28 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. (Company purpose, mission, creed, motto, etc.)</p>
                 </article>          
         </div>
-        <section class="history">
+        <section>
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. (a brief history of the company)</p>
+            <div class="history">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores fugit 
+                voluptatibus cum vel soluta quo accusantium corrupti reiciendis, quam 
+                quas ratione earum eum nostrum assumenda debitis officia est, labore 
+                veniam. (a brief history of the company)</p>
+            <img src="images/water-rafting7.jpg" alt="paddles">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam ut placeat 
+                repudiandae, dicta hic vel, id quaerat veritatis, dolores culpa maiores 
+                accusantium cupiditate. Ipsum facere corporis ex quos repellendus ipsa.</p>              
+            </div>
         </section>
-        <section class="image-gallery">
+        <section>
             <h2>Adventure Awaits You!</h2>
+            <div class="image-gallery">
             <img src="images/water-rafting1.jpg" alt="Adventure 1">
-            <img src="images/water-rafting2.jpg" alt="Adventure 2">
+            <img src="images/Water-rafting6.jpg" alt="Adventure 2">
             <img src="images/water-rafting3.jpg" alt="Adventure 3">
-            <img src="images/water-rafting4.jpg" alt="Adventure 4">
+            <img src="images/water-rafting8.jpg" alt="Adventure 4">
             <img src="images/water-rafting5.jpg" alt="Adventure 5">
+            </div>
         </section>
     </main>
     <footer>
