trips.htm update

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -25,9 +25,53 @@
         </nav>
     </header>
     <main>
-        <div>
-            
+        <h2>Whitewater Rafting Trips</h2>
+        <div class="trips">
+            <img src="images/trip1.jpg" alt="couples trip">
+            <img src="images/trip2.jpg" alt="adventure trip">
+            <img src="images/trip3.jpg" alt="waterfall trip">
+            <h3>Our Couples Trip</h3>
+            <h3>Our Adventure Rafting Trip</h3>
+            <h3>Our Waterfall Scenary Trip</h3>
+            <p>
+                Our couples trip is perfect for anyone who wants to spend some quality time on the river
+                with your significant other. Take in majestic views on a calming and relaxing journey down
+                to the south end of the bend and back. With unlimited rental time you can take a break and
+                enjoy a nice picnic on any part of the riverbank. A quick training on how to navigate the river
+                is optional before embarking on this unforgettable experience. 
+                Don't worry about the gear, it's all included in the rental fee. Just worry about feeling 
+                the experience! 
+                rental fee: $350
+                picnic addition: $79
+            </p>
+            <p>
+                Our adventure rafting trip is for those who love adrenaline and, of course, getting wet!
+                Anyone over the age of 10 is allowed on the trip with an adult acting as responsible 
+                guardian from start to finish. The trip takes you through the ups and downs of anything 
+                and everything about river rafting with rapids for up to 5 hours. Feel the excitement of 
+                being at the mercy of mother nature as you travel down the winding 26.8 mile journey of 
+                your lifetime! A river guide will be present with the group at all times, a small sack 
+                lunch will be served about 2 hours into the experience. 
+                All rafting gear will be provided prior to ebarking on the river waters. 
+                package deal: $299.99
+            </p>
+            <p>
+                Our waterfall scenary trip is for those who want to enjoy a similar experience as our
+                adventure rafting journey, but with a much less bumpy expedition. Enjoy everything nature
+                has to offer as you embark down this majestic voyage through the 12.5 mile passage all the 
+                way up to a marvelous view of the cascading Utah falls. You'll have the opportunity to spend
+                about an hour around the Utah falls and pool area to soak in this memorable adventure. 
+                Professional photos are offered at a discount price!
+                All rafting gear and training are provided and covered in the rental fee.
+                rental fee: starting at $249.99
+                professional photogarphy: starting at $99.99
+            </p>
         </div>
+        <div class="contact">
+            <h2>Questions? We'd love to hear from you!</h2>
+            <a href="contact.html">Contact us</a>
+        </div>
+
     </main>
     <footer>
         <p>&copy;2025  |  Whitewater Rapids  |  TJ McCoy</p>
@@ -41,6 +85,7 @@
             <a href="https://instagram.com">
             <img src="images/instagram-logo.png" alt="Instagram">
             </a>
+            <a href="https://www.canva.com/design/DAGk3qKNqos/-btS42_7Bc8DHLV8rA3LoA/view?utm_content=DAGk3qKNqos&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h96f5e7716d">wireframe</a>
         </nav>
 
     </footer>
