--- a/wwr/index.html
+++ b/wwr/index.html
@@ -47,7 +47,7 @@
 
             <form>
                 <fieldset>
-                    <div class="Contact info"></div>
+                    <div class="Contact info">
                         <legend>Free Newsletter Sign up</legend>
                         <label for="fullname">Full Name:</label>
                         <input type="text" id="fullname" name="fullname">
@@ -57,8 +57,7 @@
                 </fieldset>                 
                 <button type="submit">Sign me up!</button>    
             </form>
-
-            
+ 
     </main>
     <footer>
         <p>&copy;2025  |  Whitewater Rapids  |  TJ McCoy</p>
