index.html update

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -36,7 +36,7 @@
                     </p>  
             </div>
             <h2>Check out our limited time offers</h2>
-            <div class="trips">
+            <div class="offers">
                 <img src="images/adventure.jpg" alt="adventure rafting">
                 <img src="images/waterfall.jpg" alt="waterfall scenary">
                 <a href="trips.html">Learn more</a>
